🧰 fix contrast of btn and phototab

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -77,9 +77,9 @@
       0px 4px 4px 0px rgba(0, 0, 0, 0.01);
   }
   .shadow-button-dark {
-    box-shadow: 0 0 #0000, 0 0 #0000, inset 0px 1px 0px 0px #27272a,
-      0px 0px 0px 1px rgba(0, 0, 0, 0.06), 0px 1px 0px 0px rgba(0, 0, 0, 0.08),
-      0px 2px 2px 0px rgba(0, 0, 0, 0.04), 0px 3px 3px 0px rgba(0, 0, 0, 0.02),
-      0px 4px 4px 0px rgba(0, 0, 0, 0.01);
+    box-shadow: 0 0 #0000, 0 0 #0000, 0px -1px 0px 0px hsla(0, 0%, 100%, 0.04),
+      0px 0px 0px 1px hsla(0, 0%, 100%, 0.12),
+      0px 0px 1px 0px rgba(0, 0, 0, 0.04), 0px 2px 2px 0px rgba(0, 0, 0, 0.04),
+      0px 4px 2px 0px rgba(0, 0, 0, 0.04), 0px 6px 3px 0px rgba(0, 0, 0, 0.04);
   }
 }
